Fix for #2037. (1) Files in antlr/antlr[234] have been reorganized in directories named after target (e.g., Java, CSharp, JavaScript, etc.), consistent with golang/ structure. (2) pom.xml has been updated to copy from Java/ to target/ for build and test, package names removed from poms and source, directory for Java code flattened. "mvn test" works. (3) NextToken()/mutate hack has been replaced in the C# base class code with Emit(). (4) CI scripts have been updated to reflect newest dotnet-antlr, which now reads the pom.xml files, and a unified top-level script ("regtest.sh"). Noted: html/ passes, but it takes 3x's longer than the Java target! I don't know why, but will investigate. (5) The grarmmar actions in antlr/antlr[234] have been updated to have a "this." prefix. It is required for method access in JavaScript, and works for Java and CSharp targets. If this is a problem for other targets, which I haven't checked, then the .g4's can be forked and placed under the specific target directory. (7) I added C# and JavaScript target lexer base classes for antlr/antlr[234]. These work using "bash _scripts/regtest.sh CSharp" or "bash _scripts/regtest.sh JavaScript". There is a separate test for Java if you like fix "bash _scripts/regtest.sh Java". There is a problem with the CSharp target for antlr/antlr2. It is an Antlr4 runtime bug, not with grammar, and I will investigate. Until then, antlr/antlr2 is not in the C# CI. (8) I added a readme for antlr/antlr4 on the status.

--- a/antlr/antlr4/pom.xml
+++ b/antlr/antlr4/pom.xml
@@ -11,6 +11,25 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>Java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
 				<version>${antlr.version}</version>
@@ -19,12 +38,7 @@
 					<includes>
 						<include>ANTLRv4Lexer.g4</include>
 						<include>ANTLRv4Parser.g4</include>
-					</includes>		
-					<arguments>
-						<argument>-package</argument>
-						<argument>org.antlr.parser.antlr4</argument>
-					</arguments>
-					<outputDirectory>${project.build.directory}/generated-sources/antlr4/org/antlr/parser/antlr4</outputDirectory>
+					</includes>
 					<visitor>true</visitor>
 					<listener>true</listener>
 				</configuration>
@@ -45,7 +59,7 @@
 					<showTree>false</showTree>
 					<entryPoint>grammarSpec</entryPoint>
 					<grammarName>ANTLRv4</grammarName>
-					<packageName>org.antlr.parser.antlr4</packageName>
+					<packageName></packageName>
 					<exampleFiles>examples/</exampleFiles>
 				</configuration>
 				<executions>
