--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,4 @@ name = "a4py"
 
 [tool.flit.sdist]
 exclude = ["datagen/.idea/", "datagen/.git/", "datagen/datagen.iml", "datagen/.DS_Store"]
+include = ["a4py/*"]
